# Bouncy-World

./: CHANGELOG.md  Cargo.toml  README.md  config.json
examples/: boxes-collide.bouncy-world  bunch-o-boxes.bouncy-world  earth-&-moon.bouncy-world  hulu.bouncy-world  rusty-pixels-poc-clone.bouncy-world
src/: cli.rs  config.rs  constants.rs  entity.rs  main.rs  save.rs  world.rs
