[package]
name = "bouncy-world"
description = "The bouncy world engine allows for defined entities to bounce around a defined world. It starts as just a black box bouncing alone in a white world but can quickly grow into something quite creative by just using the configuration system and the world save system"
version = "1.0.1"
edition = "2021"
authors = ["Christopher Walters <chrwalte@protonmail.com>"]
readme = "README.md"
repository = "https://www.github.com/chrwalte/Bouncy-World"
documentation = "README.md"
keywords = ["BouncyWorld", "pixels", "fltk"]
categories = ["BouncyWorld", "pixels", "fltk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# used to print pixels to the screen
pixels = "0.11"
# used to show window application
fltk = { version = "1.3", features = ["rwh05", "no-images", "no-pango"] }
# used to generate some random data
rand = "0.8"
# used to convert string hex values to a u8 slice
hex = "0.4"
# used to read/write image files
image = "0.24"
# used to get/work with datetimes
chrono = "0.4"

# used to serilize and deseilize objects
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
